# polynomial-equations

./: .gitignore  CMakeLists.txt  LICENSE
include/: cubic_equation.hpp  quadratic_equation.hpp
test/: CMakeLists.txt  cubic_equation_test.cpp  quadratic_equation_test.cpp
